--- a/main.css
+++ b/main.css
@@ -4,17 +4,22 @@ header {
     left: 0;
     background-color: #1b88b3;
     color: #fff;
+    header .nav-link {
+    text-align: center;
+    color: #fff;
+}
+}
+header .nav-link {
+    text-align: center;
+    color: #fff;
 }
 #cabecalho {
     z-index: 2; 
 }
-
-
 #cabecalho .nav .nav-link.active {
     background-color: #fff;
     color: #1b88b3;
 }
-
 #cabecalho .nav .nav-link,
 .navbar-brand,
 .navbar-brand:hover,
@@ -25,6 +30,7 @@ header {
 ol {
     list-style-type: none;
 }
+
 .carousel-item img {
     width: 100%;
     display: block;
@@ -45,7 +51,22 @@ section {
     text-shadow: 1px 2px black;
 }
 
-header .nav-link {
-    text-align: center;
-    color: #fff;
+.card img {
+    min-height: 190px;
+}
+.card-img-overlay a {
+    margin-right:auto;
+}
+
+
+
+
+footer {
+    position: sticky;
+    top: 0;
+    left: 0;
+    background-color: #1b88b3;
+}
+footer ul {
+    background-color: #fff;
 }
